# DepartureBoard

./: .gitignore  Mac Compilation Guide.txt  README.md  README.txt  UpdateLog.txt
Source Code/: CMakeLists.txt
Source Code/includes/: DisplaySettings.hpp  FileParser.hpp  Location.hpp  Service.hpp  Time.hpp
Source Code/src/: DisplaySettings.cpp  FileParser.cpp  Location.cpp  Service.cpp  Time.cpp  main.cpp
